feat: added base setup

--- a/nx.json
+++ b/nx.json
@@ -56,8 +56,8 @@
       "unitTestRunner": "jest"
     },
     "@nx/angular:component": {
-      "style": "css"
+      "style": "scss"
     }
   },
-  "defaultProject": "pokedex"
+  "defaultProject": "pokemon"
 }
