--- a/project.json
+++ b/project.json
@@ -1,8 +1,8 @@
 {
-  "name": "pokedex",
+  "name": "pokemon",
   "$schema": "node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "app",
+  "prefix": "pkdx",
   "sourceRoot": "./src",
   "tags": [],
   "targets": {
@@ -10,14 +10,14 @@
       "executor": "@angular-devkit/build-angular:application",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/pokedex",
+        "outputPath": "dist/pokemon",
         "index": "./src/index.html",
         "browser": "./src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "./tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": ["./src/favicon.ico", "./src/assets"],
-        "styles": ["./src/styles.scss"],
+        "styles": ["./src/styles.scss", "./node_modules/primeng/resources/themes/viva-dark/theme.css"],
         "scripts": []
       },
       "configurations": {
@@ -48,10 +48,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "pokedex:build:production"
+          "buildTarget": "pokemon:build:production"
         },
         "development": {
-          "buildTarget": "pokedex:build:development"
+          "buildTarget": "pokemon:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -59,7 +59,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "pokedex:build"
+        "buildTarget": "pokemon:build"
       }
     },
     "lint": {
