--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
     "@nx/angular": "19.0.1",
+    "ngx-infinite-scroll": "^17.0.0",
     "primeng": "^17.16.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
